--- a/multiline.css
+++ b/multiline.css
@@ -26,6 +26,7 @@
   font-size: 11px;
 }
 
+
 .chart-wrapper p {
     font-size: 16px;
     margin-top:5px;
@@ -113,7 +114,14 @@
 }
 
 
+
+
 @media (max-width:500px){
     .chart-wrapper .line {stroke-width: 3px;}
     .chart-wrapper .legend {font-size: 14px;}
+}
+
+#myLabel {
+  font-family: sans-serif;
+    font-size: 18px;
 }
